added material pricing in collector service
